<resources>
    <string name="app_name">AMD</string>
    <string name="edit_text_username_info">Username</string>
    <string name="edit_text_password_info">Password</string>
    <string name="edit_button_text">Login</string>
    <string name="text_view_or">------------------- OR -------------------</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in_button">Log In</string>
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="edit_text_email">Email</string>
    <string name="lets_find_your_account">Lets find your account</string>
    <string name="instruction">
        Enter your username or email and we\'ll send a temporary password to your email.
    </string>
    <string name="get_your_password">Get Your Password!</string>
    <string name="join_amd">Join AMD</string>
    <string name="create_amd_account">Create AMD Account!</string>
    <string name="introductory_message_sign_upenter_new_username_and_password_to_create_a_new_amd_account">Enter new username and password, to create a new AMD account.</string>
    <string name="username_or_email">Username or Email</string>
    <string name="back">Back to Log in</string>
    <string name="email">Email</string>
    <string name="introducory_connected">As long as you\'re connected, the AMD server detects attacks on your phone.</string>
    <string name="change_username">Change Username</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="delete_user">Delete User</string>
    <string name="log_out">Log Out</string>
    <string name="invalid_password_confirmation_title">
        Invalid Password Confirmation
    </string>
    <string name="invalid_password_confirmation_body">
        You have confirmed the password incorrectly. please try again.
    </string>
    <string name="back_to_settings">Back To Settings</string>
    <string name="help_message">All rights reserved to Ben Gabay.\nRelease Date: 12/3/2018\n\n\n
        Android Malwares Detector(AMD), is detecting malwares on your Android device. You have
        several options after logging in: Stay on the home page, see notifications from
        the AMD server following malwares found, or change your settings on the settings
        page. On the Settings page, you can change your username, change your password,
        change your email, mute notifications from the server, delete your user, or log out.
        As long as you\'re signed in, a few checks are made on your device:\n- Check all
        applications that installed on your device.\n- Check all the processes running on
        the device.\n- Check all SMS received.\n- If you have used the camera services, because
        you are not allowed to.\n- If there are settings that are enabled on your device and
        may endanger it.\n- The OS version of the Android device.\n\nFor more questions:
        ben.gabay38@gmail.com
    </string>

</resources>
