<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true" android:focusableInTouchMode="true"
    tools:context="com.example.user.testapp.ForgotPassword">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/lock"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/introductory_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/lets_find_your_account"/>

    <TextView
        android:id="@+id/introductory_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/introductory_message"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/instruction"/>

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="28sp"
        android:hint="@string/username_or_email"/>

    <Button
        android:id="@+id/cross_x_button1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="360dp"
        android:layout_alignEnd="@id/edit_text_username"
        android:onClick="resetUsernameText"
        android:visibility="gone"
        android:background="@drawable/cross_x3" />

    <Button
        android:id="@+id/lets_get_your_password_button"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="430dp"
        android:ems="15"
        android:textSize="25sp"
        android:background="#1A237E"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:text="@string/get_your_password"
        android:onClick="OnForgotPassword"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:text="@string/back"
        android:background="@null"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:onClick="backLogin"/>


</RelativeLayout>